# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
games/: models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py
games_project/: asgi.py  settings.py  urls.py  wsgi.py
